[package]
name = "rustyca"
version = "0.1.0"
authors = ["Domenico Luciani <domenicoleoneluciani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "cookies"] }
scraper = "0.12.0"
yaml-rust = "0.4"